syntax = "proto3";

package envoy.service.discovery.v3alpha;

import "envoy/service/discovery/v3alpha/discovery.proto";

import "google/api/annotations.proto";

import "udpa/annotations/versioning.proto";

option java_package = "io.envoyproxy.envoy.service.discovery.v3alpha";
option java_outer_classname = "SdsProto";
option java_multiple_files = true;
option java_generic_services = true;

service SecretDiscoveryService {
  rpc DeltaSecrets(stream DeltaDiscoveryRequest) returns (stream DeltaDiscoveryResponse) {
  }

  rpc StreamSecrets(stream DiscoveryRequest) returns (stream DiscoveryResponse) {
  }

  rpc FetchSecrets(DiscoveryRequest) returns (DiscoveryResponse) {
    option (google.api.http).post = "/v3alpha/discovery:secrets";
    option (google.api.http).body = "*";
  }
}

// [#not-implemented-hide:] Not configuration. Workaround c++ protobuf issue with importing
// services: https://github.com/google/protobuf/issues/4221
message SdsDummy {
  option (udpa.annotations.versioning).previous_message_type =
      "envoy.service.discovery.v2.SdsDummy";
}
